plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pairingplanet'
version = '0.0.1-SNAPSHOT'
description = 'pairing planet backend '

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.3' // JWT 라이브러리
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Postgres 배열/JSON 타입 처리를 위한 유틸리티 (필수 추천)
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'

    // [QueryDSL] Core & JPA
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'

    // [QueryDSL] Annotation Processor (Generates Q-Classes)
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"

    // [Required for Annotation Processing in Jakarta EE]
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // AWS S3 SDK (MinIO 호환)
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0') // 버전은 최신에 맞게 조정 가능
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
    implementation 'io.minio:minio:8.5.7'
}

tasks.named('test') {
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.files.find { it.name.contains('mockito-core') }}"
	useJUnitPlatform()

}
